--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-dom": "^16.3.1",
     "react-progressive-image": "^0.3.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "styled-components": "^3.2.5"
