add README and build status

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-progressive-image": "^0.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
     "styled-components": "^3.2.5"
   },
   "license": "ISC",
