--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-progressive-image": "^0.3.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-localstorage-simple": "^2.1.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.2.5"
   },
   "license": "ISC",
   "scripts": {
+    "precommit": "yarn lint && yarn format && git add .",
+    "prepush": "CI=true yarn test",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:test": "CI=true react-scripts test --env=jsdom",
@@ -26,6 +32,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
+    "husky": "^0.14.3",
     "jest-fetch-mock": "^1.5.0",
     "jest-styled-components": "^5.0.1",
     "prettier": "^1.11.1"
