add missing dependency

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
+    "lodash.camelcase": "^4.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-progressive-image": "^0.3.0",
