--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "3.0.1",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash.camelcase": "^4.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-progressive-image": "^0.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.0",
+    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.5",
     "redux-localstorage-simple": "^2.1.3",
     "redux-thunk": "^2.3.0",
@@ -30,9 +32,9 @@
     "setup:prod": "npm install && npm run build:test && npm run lint && npm install --production"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.5.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "babel-plugin-styled-components": "^1.10.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.4",
     "husky": "^0.14.3",
     "jest-fetch-mock": "^1.6.5",
