--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash.camelcase": "^4.3.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-progressive-image": "^0.3.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-localstorage-simple": "^2.1.3",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-localstorage-simple": "^2.1.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^4.1.3"
   },
   "license": "ISC",
   "scripts": {
@@ -35,11 +36,11 @@
     "babel-plugin-styled-components": "^1.10.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
-    "enzyme-to-json": "^3.3.4",
+    "enzyme-to-json": "^3.3.5",
     "husky": "^0.14.3",
-    "jest-fetch-mock": "^1.6.5",
+    "jest-fetch-mock": "^1.7.5",
     "jest-styled-components": "^5.0.1",
-    "prettier": "^1.13.7"
+    "prettier": "^1.16.4"
   },
   "browserslist": [
     ">0.2%",
