WIP: redux and routes

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "3.0.1",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-progressive-image": "^0.3.0",
     "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
