--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "build:test": "CI=true react-scripts test --env=jsdom",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js",
-    "format": "prettier --write 'src/**/*.js'",
+    "lint": "eslint src/**/**/**/*.js",
+    "format": "prettier --write 'src/**/**/**/*.js'",
     "setup:prod": "npm install && npm run build:test && npm run lint && npm install --production"
   },
   "devDependencies": {
