--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-progressive-image": "^0.3.0",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-progressive-image": "^0.6.0",
     "react-redux": "^5.1.1",
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
@@ -16,12 +16,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-localstorage-simple": "^2.1.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.2.0"
   },
   "license": "ISC",
   "scripts": {
-    "precommit": "npm run lint && npm run format && git add .",
-    "prepush": "CI=true npm test",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:test": "CI=true react-scripts test --env=jsdom",
@@ -31,14 +29,26 @@
     "format": "prettier --write 'src/**/**/**/*.js'",
     "setup:prod": "npm install && npm run build:test && npm run lint && npm install --production"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run build:test"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
-    "husky": "^0.14.3",
-    "jest-fetch-mock": "^1.7.5",
-    "jest-styled-components": "^5.0.1",
+    "husky": "^1.3.1",
+    "jest-styled-components": "^6.3.1",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.16.4"
   },
   "browserslist": [
