--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#ff79c6",
   "background_color": "#151617"
