trying something with  drone ci config

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,4 +6,10 @@ steps:
     image: node:10.7.0
     commands:
       - npm install
+      - npm run lint
       - CI=true npm test
+
+  - name: build
+      commands:
+        - npm run build --production
+  
