--- a/.drone.yml
+++ b/.drone.yml
@@ -9,5 +9,7 @@ steps:
       - npm run lint
       - CI=true npm test
   - name: build
+    image: node:10.7.0
     commands:
+      - npm install --production
       - npm run build --production
