--- a/package.json
+++ b/package.json
@@ -1,61 +1,13 @@
 {
-  "name": "mvl-app",
-  "version": "4.2.0",
   "private": true,
-  "dependencies": {
-    "@reach/router": "^1.2.1",
-    "axios": "^0.18.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-helmet-async": "^1.0.2",
-    "react-progressive-image": "^0.6.0",
-    "react-redux": "^5.1.1",
-    "react-scripts": "^2.1.8",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-localstorage-simple": "^2.1.6",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^4.2.0"
-  },
-  "license": "ISC",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:test": "CI=true react-scripts test --env=jsdom",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/**/**/*.js",
-    "format": "prettier --write 'src/**/**/**/*.js'",
-    "setup:prod": "npm install && npm run build:test && npm run lint && npm install --production"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm run build:test"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ]
-  },
+  "workspaces": [
+    "api",
+    "mvl-app"
+  ],
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "enzyme-to-json": "^3.3.5",
-    "husky": "^1.3.1",
-    "jest-styled-components": "^6.3.1",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4"
+    "now": "^15.6.2"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "scripts": {
+    "start": "now dev"
+  }
 }
