--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
     "mvl-app"
   ],
   "devDependencies": {
-    "now": "^15.6.2"
+    "now": "^15.6.2",
+    "husky": "^1.3.1",
+    "jest-styled-components": "^6.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn workspace mvl-app pre-commit"
+    }
   },
   "scripts": {
     "start": "now dev"
