add dev tooling

--- a/mvl-app/package.json
+++ b/mvl-app/package.json
@@ -48,7 +48,10 @@
     "babel-plugin-styled-components": "^1.10.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "enzyme-to-json": "^3.3.5"
+    "enzyme-to-json": "^3.3.5",
+    "jest-styled-components": "^6.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4"
   },
   "browserslist": [
     ">0.2%",
