--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   ],
   "devDependencies": {
     "now": "^15.6.2",
-    "husky": "^1.3.1",
-    "jest-styled-components": "^6.3.1",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4"
+    "husky": "^1.3.1"
   },
   "husky": {
     "hooks": {
