--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - 10.7.0
+  - 12.5.0
 cache:
   directories:
-    - node_modules
+    yarn: true
 
 install:
   - yarn
