--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
-    "md5": "^2.2.1"
+    "axios": "0.19.0",
+    "md5": "2.2.1"
   }
 }
