--- a/mvl-app/package.json
+++ b/mvl-app/package.json
@@ -3,21 +3,21 @@
   "version": "4.2.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "axios": "^0.18.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-helmet-async": "^1.0.2",
-    "react-progressive-image": "^0.6.0",
-    "react-redux": "^5.1.1",
-    "react-scripts": "^2.1.8",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-localstorage-simple": "^2.1.6",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^4.2.0"
+    "@reach/router": "1.2.1",
+    "axios": "0.19.0",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-helmet-async": "1.0.2",
+    "react-progressive-image": "0.6.0",
+    "react-redux": "7.1.0",
+    "react-scripts": "3.0.1",
+    "redux": "4.0.1",
+    "redux-actions": "2.6.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-localstorage-simple": "2.1.6",
+    "redux-thunk": "2.3.0",
+    "styled-components": "4.3.2"
   },
   "license": "ISC",
   "scripts": {
@@ -45,13 +45,14 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "enzyme-to-json": "^3.3.5",
-    "jest-styled-components": "^6.3.1",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4"
+    "babel-plugin-styled-components": "1.10.5",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "enzyme-to-json": "3.3.5",
+    "eslint": "6.0.1",
+    "jest-styled-components": "6.3.3",
+    "lint-staged": "9.0.0",
+    "prettier": "1.18.2"
   },
   "browserslist": [
     ">0.2%",
