--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "mvl-app"
   ],
   "devDependencies": {
-    "now": "^15.6.2",
-    "husky": "^1.3.1"
+    "husky": "3.0.0",
+    "now": "15.6.2"
   },
   "husky": {
     "hooks": {
