--- a/mvl-app/package.json
+++ b/mvl-app/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:test": "CI=true react-scripts test --env=jsdom",
+    "build:test": "CI=true react-scripts test --env=node",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/**/**/*.js",
