--- a/mvl-app/package.json
+++ b/mvl-app/package.json
@@ -3,8 +3,11 @@
   "version": "4.2.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
     "@reach/router": "1.2.1",
     "axios": "0.19.0",
+    "emotion-theming": "^10.0.14",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -16,8 +19,7 @@
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.8",
     "redux-localstorage-simple": "2.1.6",
-    "redux-thunk": "2.3.0",
-    "styled-components": "4.3.2"
+    "redux-thunk": "2.3.0"
   },
   "license": "ISC",
   "scripts": {
