--- a/package.json
+++ b/package.json
@@ -1,19 +1,65 @@
 {
+  "name": "mvl",
+  "version": "4.2.0",
   "private": true,
-  "workspaces": [
-    "api",
-    "mvl-app"
-  ],
-  "devDependencies": {
-    "husky": "3.0.0",
-    "now": "15.6.2"
+  "dependencies": {
+    "@reach/router": "1.2.1",
+    "axios": "0.19.0",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-helmet-async": "1.0.2",
+    "react-progressive-image": "0.6.0",
+    "react-redux": "7.1.0",
+    "react-scripts": "3.0.1",
+    "redux": "4.0.1",
+    "redux-actions": "2.6.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-localstorage-simple": "2.1.6",
+    "redux-thunk": "2.3.0",
+    "styled-components": "^4.3.2"
+  },
+  "license": "ISC",
+  "scripts": {
+    "start": "yarn now-dev",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "build:test": "CI=true react-scripts test --env=node",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/**/**/*.js",
+    "format": "prettier --write 'src/**/**/**/*.js'",
+    "setup:prod": "yarn && yarn build:test && yarn lint && yarn install --production",
+    "now-dev": "yarn dev",
+    "pre-commit": "lint-staged && yarn build:test"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn workspace mvl-app pre-commit"
+      "pre-commit": "yarn pre-commit"
     }
   },
-  "scripts": {
-    "start": "now dev"
-  }
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "1.10.5",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "enzyme-to-json": "3.3.5",
+    "husky": "3.0.0",
+    "jest-styled-components": "6.3.3",
+    "lint-staged": "9.0.0",
+    "now": "15.6.2",
+    "prettier": "1.18.2"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
