--- a/now.json
+++ b/now.json
@@ -7,11 +7,11 @@
   },
   "builds": [
     {
-      "src": "mvl-app/package.json",
+      "src": "package.json",
       "use": "@now/static-build",
       "config": { "distDir": "build" }
     },
-    { "src": "mvl-api/index.js", "use": "@now/node" }
+    { "src": "api/index.js", "use": "@now/node" }
   ],
   "routes": [
     {
