--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,16 +4,17 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 12.5.0
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.5.0'
-    - run: yarn install
-    - run: npm test
-      env:
-        CI: true
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.5.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.5.0'
+      - run: yarn install
+      - run: yarn lint
+      - run: yarn test
+      - run: yarn build
+        env:
+          CI: true
