--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: '12.5.0'
       - run: yarn install
       - run: yarn lint
-      - run: yarn test
+      - run: yarn test:CI
       - run: yarn build
         env:
           CI: true
