--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,6 @@ jobs:
           CI: true
   build:
     runs-on: ubuntu-latest
+    needs: install
     steps:
       - run: yarn build
-      - needs: install
