--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,11 @@ jobs:
         with:
           node-version: '12.5.0'
       - run: yarn install
+      - name: Stash installed app
+        uses: actions/upload-artifact@v1
+        with:
+          name: mvlApp
+          path: /
         # - run: yarn lint
         # - run: yarn test:CI
         # - run: yarn build
@@ -21,5 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
+      - name: unstash installed app
+        uses: actions/download-artifact@v1
+        with:
+          name: mvlApp
       - run: ls -a
       - run: yarn build
