--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,10 +13,11 @@ jobs:
           node-version: '12.5.0'
       - run: yarn install
       - run: ls -a
-        # - name: Stash installed app
-        #   uses: actions/upload-artifact@v1
-        #   with:
-        #     name: mvlApp
+      - name: Stash installed app
+        uses: actions/upload-artifact@v1
+        with:
+          name: mvlApp
+          path: .
         #   # - run: yarn lint
         #   # - run: yarn test:CI
         #   # - run: yarn build
