--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,7 @@ name: Build and Test
 on: [push]
 
 jobs:
-  install:
+  test-build-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,24 +12,8 @@ jobs:
         with:
           node-version: '12.5.0'
       - run: yarn install
-      - run: ls -a
-      - name: Stash installed app
-        uses: actions/upload-artifact@v1
-        with:
-          name: mvlApp
-          path: .
-        #   # - run: yarn lint
-        #   # - run: yarn test:CI
-        #   # - run: yarn build
+      - run: yarn lint
+      - run: yarn build
+      - run: yarn test:CI
         env:
           CI: true
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs: install
-  #   steps:
-  #     - name: unstash installed app
-  #       uses: actions/download-artifact@v1
-  #       with:
-  #         name: mvlApp
-  #     - run: ls -a
-  #     - run: yarn build
