--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "format": "prettier --write 'src/**/**/**/*.js'",
     "setup:prod": "yarn && yarn build:test && yarn lint && yarn install --production",
     "now-dev": "yarn dev",
-    "pre-commit": "lint-staged && yarn test:CI"
+    "pre-commit": "lint-staged"
   },
   "husky": {
     "hooks": {
