--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,9 +3,8 @@ name: Build and Test
 on: [push]
 
 jobs:
-  build:
+  test-build-lint:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 12.5.0
@@ -14,7 +13,7 @@ jobs:
           node-version: '12.5.0'
       - run: yarn install
       - run: yarn lint
-      - run: yarn test:CI
       - run: yarn build
+      - run: yarn test:CI
         env:
           CI: true
