--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mvl",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "private": true,
   "dependencies": {
     "@reach/router": "1.2.1",
@@ -31,7 +31,7 @@
     "format": "prettier --write 'src/**/**/**/*.js'",
     "setup:prod": "yarn && yarn build:test && yarn lint && yarn install --production",
     "now-dev": "yarn dev",
-    "pre-commit": "lint-staged && yarn test:CI"
+    "pre-commit": "lint-staged"
   },
   "husky": {
     "hooks": {
