--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,19 @@ name: Build and Test
 on: [push]
 
 jobs:
-  test-build-lint:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.5.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.5.0'
+      - run: yarn install
+      - run: yarn build
+        env:
+          CI: true
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -13,7 +25,17 @@ jobs:
           node-version: '12.5.0'
       - run: yarn install
       - run: yarn lint
-      - run: yarn build
+        env:
+          CI: true
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.5.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.5.0'
+      - run: yarn install
       - run: yarn test:CI
         env:
           CI: true
