--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "1.2.1",
     "axios": "0.19.0",
+    "husky": "^4.2.1",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -50,7 +51,6 @@
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "enzyme-to-json": "3.3.5",
-    "husky": "3.0.0",
     "jest-styled-components": "6.3.3",
     "lint-staged": "9.0.0",
     "now": "15.6.2",
