--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "5.0.4",
   "private": true,
   "dependencies": {
-    "@reach/router": "1.2.1",
-    "axios": "0.19.0",
+    "@reach/router": "1.3.1",
+    "axios": "0.19.2",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-helmet-async": "1.0.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-helmet-async": "1.0.4",
     "react-progressive-image": "0.6.0",
-    "react-redux": "7.1.0",
-    "react-scripts": "3.3.0",
-    "redux": "4.0.1",
+    "react-redux": "7.1.3",
+    "react-scripts": "3.3.1",
+    "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.8",
     "redux-localstorage-simple": "2.1.6",
     "redux-thunk": "2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^5.0.1"
   },
   "license": "ISC",
   "scripts": {
@@ -41,20 +41,19 @@
   "lint-staged": {
     "*.js": [
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.10.5",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
-    "enzyme-to-json": "3.3.5",
-    "husky": "3.0.0",
-    "jest-styled-components": "6.3.3",
-    "lint-staged": "9.0.0",
-    "now": "15.6.2",
-    "prettier": "1.18.2"
+    "babel-plugin-styled-components": "1.10.7",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "enzyme-to-json": "3.4.4",
+    "husky": "4.2.1",
+    "jest-styled-components": "7.0.0",
+    "lint-staged": "10.0.7",
+    "now": "17.0.3",
+    "prettier": "1.19.1"
   },
   "browserslist": [
     ">0.2%",
