--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "5.0.4",
   "private": true,
   "dependencies": {
-    "@reach/router": "1.3.1",
+    "@reach/router": "1.3.4",
     "axios": "0.19.2",
     "prop-types": "15.7.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-helmet-async": "1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-helmet-async": "1.0.6",
     "react-progressive-image": "0.6.0",
-    "react-redux": "7.1.3",
-    "react-scripts": "3.3.1",
+    "react-redux": "7.2.1",
+    "react-scripts": "3.4.1",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.8",
-    "redux-localstorage-simple": "2.1.6",
+    "redux-localstorage-simple": "2.3.1",
     "redux-thunk": "2.3.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.1.1"
   },
   "license": "ISC",
   "scripts": {
-    "start": "yarn now-dev",
+    "start": "npm run now-dev",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test:CI": "CI=true react-scripts test --env=node",
@@ -29,13 +29,13 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/**/**/*.js",
     "format": "prettier --write 'src/**/**/**/*.js'",
-    "setup:prod": "yarn && yarn build:test && yarn lint && yarn install --production",
-    "now-dev": "yarn dev",
-    "pre-commit": "lint-staged"
+    "now-dev": "npm run dev",
+    "pre-commit": "lint-staged",
+    "update-dependencies": "npx npm-check-updates --upgrade && npm i"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn pre-commit"
+      "pre-commit": "npm run pre-commit"
     }
   },
   "lint-staged": {
@@ -45,15 +45,15 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.10.7",
+    "babel-plugin-styled-components": "1.11.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "3.4.4",
-    "husky": "4.2.1",
-    "jest-styled-components": "7.0.0",
-    "lint-staged": "10.0.7",
-    "now": "17.0.3",
-    "prettier": "1.19.1"
+    "enzyme-to-json": "3.5.0",
+    "husky": "4.2.5",
+    "jest-styled-components": "7.0.2",
+    "lint-staged": "10.2.11",
+    "now": "19.2.0",
+    "prettier": "2.0.5"
   },
   "browserslist": [
     ">0.2%",
