--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@reach/router": "1.3.4",
-    "axios": "0.19.2",
+    "axios": "^0.19.2",
+    "md5": "^2.3.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
