--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "dependencies": {
     "@reach/router": "1.3.4",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "md5": "^2.3.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet-async": "1.0.6",
+    "react-helmet": "^6.1.0",
     "react-progressive-image": "0.6.0",
     "react-redux": "7.2.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.8",
     "redux-localstorage-simple": "2.3.1",
     "redux-thunk": "2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.0"
   },
   "license": "ISC",
   "scripts": {
@@ -48,13 +48,13 @@
   "devDependencies": {
     "babel-plugin-styled-components": "1.11.1",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "3.5.0",
-    "husky": "4.2.5",
-    "jest-styled-components": "7.0.2",
-    "lint-staged": "10.2.11",
+    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-to-json": "3.6.0",
+    "husky": "4.3.0",
+    "jest-styled-components": "7.0.3",
+    "lint-staged": "10.4.0",
     "now": "19.2.0",
-    "prettier": "2.0.5"
+    "prettier": "2.1.2"
   },
   "browserslist": [
     ">0.2%",
