--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "dependencies": {
     "@reach/router": "1.3.4",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "md5": "^2.3.0",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-progressive-image": "0.6.0",
-    "react-redux": "7.2.1",
-    "react-scripts": "3.4.3",
+    "react-redux": "7.2.2",
+    "react-scripts": "4.0.0",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.8",
     "redux-localstorage-simple": "2.3.1",
     "redux-thunk": "2.3.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "license": "ISC",
   "scripts": {
@@ -47,12 +47,13 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "1.11.1",
+    "cypress": "^5.6.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
-    "enzyme-to-json": "3.6.0",
+    "enzyme-to-json": "3.6.1",
     "husky": "4.3.0",
     "jest-styled-components": "7.0.3",
-    "lint-staged": "10.4.0",
+    "lint-staged": "10.5.1",
     "now": "19.2.0",
     "prettier": "2.1.2"
   },
