--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@reach/router": "1.3.4",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
     "md5": "^2.3.0",
+    "postcss": "^7.0.35",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -18,16 +21,15 @@
     "redux-devtools-extension": "2.13.8",
     "redux-localstorage-simple": "2.3.1",
     "redux-thunk": "2.3.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "license": "ISC",
   "scripts": {
     "start": "netlify dev",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test:CI": "CI=true react-scripts test --env=node",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "dev": "craco start",
+    "build": "craco build",
+    "test:CI": "CI=true craco test --env=node",
+    "test": "craco test --env=jsdom",
     "lint": "eslint src/**/**/**/*.js",
     "format": "prettier --write 'src/**/**/**/*.js'",
     "now-dev": "npm run dev",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.0.0",
     "babel-plugin-styled-components": "1.11.1",
     "cypress": "^5.6.0",
     "enzyme": "3.11.0",
