--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "license": "ISC",
   "scripts": {
-    "start": "netlify dev",
-    "dev": "craco start",
+    "dev": "netlify dev",
+    "start": "craco start",
     "build": "craco build",
     "test:CI": "CI=true craco test --env=node",
     "test": "craco test --env=jsdom",
