--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "1.3.4",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
     "md5": "^2.3.0",
