--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reach/router": "1.3.4",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "md5": "^2.3.0",
     "prop-types": "15.7.2",
     "react": "17.0.1",
@@ -12,11 +12,11 @@
     "react-helmet": "^6.1.0",
     "react-progressive-image": "0.6.0",
     "react-redux": "7.2.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.3",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.8",
-    "redux-localstorage-simple": "2.3.1",
+    "redux-localstorage-simple": "2.4.0",
     "redux-thunk": "2.3.0",
     "styled-components": "^5.2.1"
   },
@@ -32,7 +32,7 @@
     "format": "prettier --write 'src/**/**/**/*.js'",
     "now-dev": "npm run dev",
     "pre-commit": "lint-staged",
-    "update-dependencies": "npx npm-check-updates --upgrade && npm i"
+    "update-dependencies": "npx npm-check-updates --upgrade -x husky && npm i"
   },
   "husky": {
     "hooks": {
@@ -46,16 +46,16 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.11.1",
-    "cypress": "^5.6.0",
+    "babel-plugin-styled-components": "1.12.0",
+    "cypress": "^6.5.0",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "3.6.1",
     "husky": "4.3.0",
     "jest-styled-components": "7.0.3",
-    "lint-staged": "10.5.1",
+    "lint-staged": "10.5.4",
     "now": "19.2.0",
-    "prettier": "2.1.2"
+    "prettier": "2.2.1"
   },
   "browserslist": [
     ">0.2%",
