--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "@reach/router": "1.3.4",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "@tailwindcss/typography": "^0.3.1",
-    "autoprefixer": "^9.8.6",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "md5": "^2.3.0",
-    "postcss": "^7.0.35",
+    "postcss": "^8.2.6",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-progressive-image": "0.6.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "react-scripts": "^4.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   },
   "license": "ISC",
   "scripts": {
@@ -23,11 +24,11 @@
     "start": "craco start",
     "build": "craco build",
     "test:CI": "CI=true craco test --env=node",
-    "test": "craco test --env=jsdom",
+    "test": "react-scripts test --env=jsdom",
     "lint": "eslint src/**/**/**/*.js",
     "format": "prettier --write 'src/**/**/**/*.js'",
     "pre-commit": "lint-staged",
-    "update-dependencies": "npx npm-check-updates --upgrade -x husky && npm i"
+    "update-dependencies": "npx npm-check-updates --upgrade -x husky && npm install --legacy-peer-deps"
   },
   "husky": {
     "hooks": {
@@ -41,9 +42,9 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.0.0",
+    "@craco/craco": "^6.1.1",
     "babel-plugin-styled-components": "1.12.0",
-    "cypress": "^6.5.0",
+    "cypress": "^6.6.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "3.6.1",
