--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 15.2.0
+      - name: Use Node.js 15.10.0
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.0'
-      - run: npm ci
+          node-version: '15.10.0'
+      - run: npm ci --legacy-peer-deps
       - run: npm run build
         env:
           CI: true
@@ -19,11 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 15.2.0
+      - name: Use Node.js 15.10.0
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.0'
-      - run: npm ci
+          node-version: '15.10.0'
+      - run: npm ci --legacy-peer-deps
       - run: npm run lint
         env:
           CI: true
@@ -31,11 +31,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 15.2.0
+      - name: Use Node.js 15.10.0
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.0'
-      - run: npm ci
+          node-version: '15.10.0'
+      - run: npm ci --legacy-peer-deps
       - run: npm run test:CI
         env:
           CI: true
