--- a/.nova/Configuration.json
+++ b/.nova/Configuration.json
@@ -1,4 +1,5 @@
 {
+  "apexskier.eslint.config.fixOnSave" : "Enable",
   "workspace.art_style" : 0,
   "workspace.color" : 0,
   "workspace.preview_append_paths" : false,
