--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
   "trailingComma": "none",
-  "singleQuote": true
+  "singleQuote": true,
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"]
 }
