--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,20 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# build output
+dist/
 
 # dependencies
-/node_modules
+node_modules/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.idea
-
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-getMock.js
-mock.js
 
-# Local Netlify folder
-.netlify
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
+.vercel
