--- a/package.json
+++ b/package.json
@@ -1,66 +1,36 @@
 {
   "name": "mvl",
   "version": "6.1.0",
-  "private": true,
-  "dependencies": {
-    "@reach/router": "1.3.4",
-    "axios": "^0.21.1",
-    "md5": "^2.3.0",
-    "prop-types": "15.7.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-progressive-image": "0.6.0",
-    "react-redux": "7.2.2",
-    "react-scripts": "4.0.3",
-    "redux": "4.0.5",
-    "redux-actions": "2.6.5",
-    "redux-devtools-extension": "2.13.8",
-    "redux-localstorage-simple": "2.4.0",
-    "redux-thunk": "2.3.0",
-    "styled-components": "^5.2.1"
-  },
-  "license": "ISC",
   "scripts": {
-    "start": "netlify dev",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test:CI": "CI=true react-scripts test --env=node",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/**/**/*.js",
-    "format": "prettier --write 'src/**/**/**/*.js'",
-    "now-dev": "npm run dev",
-    "pre-commit": "lint-staged",
-    "update-dependencies": "npx npm-check-updates --upgrade -x husky && npm i"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run pre-commit"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "ENABLE_VC_BUILD=1 astro build",
+    "preview": "astro preview",
+    "lint": "eslint src --fix",
+    "format": "prettier --write src"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.12.0",
-    "cypress": "^6.5.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
-    "enzyme-to-json": "3.6.1",
-    "husky": "4.3.0",
-    "jest-styled-components": "7.0.3",
-    "lint-staged": "10.5.4",
-    "now": "19.2.0",
-    "prettier": "2.2.1"
+    "@astrojs/react": "^0.1.2",
+    "@astrojs/tailwind": "^0.2.1",
+    "@astrojs/vercel": "^0.2.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "astro": "^1.0.0-beta.27",
+    "autoprefixer": "^10.4.7",
+    "eslint-plugin-react": "^7.29.4",
+    "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^12.4.1",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "prettier-plugin-astro": "^0.0.12",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "tailwindcss": "^3.0.24"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "dependencies": {
+    "axios": "^0.27.2",
+    "prop-types": "^15.8.1",
+    "ts-md5": "^1.2.11"
+  }
 }
