--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "format:check": "prettier --check  .",
     "prepare": "is-ci || husky install",
     "lint-staged": "lint-staged",
-    "test": "vitest"
+    "test": "vitest",
+    "update-dependencies": "npx npm-check-updates --upgrade && npm i"
   },
   "devDependencies": {
     "@astrojs/react": "^0.1.2",
     "@astrojs/tailwind": "^0.2.1",
-    "@astrojs/vercel": "^0.2.1",
+    "@astrojs/vercel": "^0.2.2",
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/node": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.24.0",
-    "@typescript-eslint/parser": "^5.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "@vitejs/plugin-react": "^1.3.2",
-    "astro": "^1.0.0-beta.27",
+    "astro": "^1.0.0-beta.29",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
