--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": [
     "prettier",
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:cypress/recommended"
   ],
   "env": {
     "browser": true,
