--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "prepare": "is-ci || husky install",
     "lint-staged": "lint-staged",
     "test": "vitest",
-    "update-dependencies": "npx npm-check-updates --upgrade && npm i"
+    "update-dependencies": "npx npm-check-updates --upgrade && npm i",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
     "@astrojs/react": "^0.1.2",
     "@astrojs/tailwind": "^0.2.1",
     "@astrojs/vercel": "^0.2.2",
     "@tailwindcss/typography": "^0.5.2",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
@@ -29,8 +31,10 @@
     "@vitejs/plugin-react": "^1.3.2",
     "astro": "^1.0.0-beta.29",
     "autoprefixer": "^10.4.7",
+    "cypress": "^9.6.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
     "happy-dom": "^3.2.2",
     "husky": "^8.0.1",
