--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
-  "include": ["**/*.ts", "**/*.tsx", "astro.config.mjs"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "astro.config.mjs",
+    "cypress/support/commands.js"
+  ],
   "compilerOptions": {
     // Enable top-level await, and other modern ESM features.
     "target": "ESNext",
@@ -15,7 +20,7 @@
     "jsx": "react-jsx",
     "strict": true,
     "allowJs": true,
-    "types": ["vite/client", "node"],
+    "types": ["vite/client", "node", "cypress", "@testing-library/cypress"],
     "baseUrl": ".",
     "paths": {
       "++components/*": ["src/components/*"],
