use node instead of bun

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,36 +7,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Bun latest
-        uses: xhyrom/setup-bun@v0.1.6
+      - name: Use Node.js 19
+        uses: actions/setup-node@v1
         with:
-          bun-version: latest
-      - run: bun install
-      - run: ENABLE_VC_BUILD=1 bun run build
+          node-version: "19"
+      - run: npm install
+      - run: ENABLE_VC_BUILD=1 npm run build
         env:
           CI: true
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Bun latest
-        uses: xhyrom/setup-bun@v0.1.6
+      - name: Use Node.js 19
+        uses: actions/setup-node@v1
         with:
-          bun-version: latest
-      - run: bun install
-      - run: bun run lint
-      - run: bun run format:check
+          node-version: "19"
+      - run: npm install
+      - run: npm run lint
+      - run: npm run format:check
         env:
           CI: true
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Bun latest
-        uses: xhyrom/setup-bun@v0.1.6
+      - name: Use Node.js 19
+        uses: actions/setup-node@v1
         with:
-          bun-version: latest
-      - run: bun install
-      - run: bun run test
+          node-version: "19"
+      - run: npm install
+      - run: npm run test
         env:
           CI: true
