--- a/package.json
+++ b/package.json
@@ -16,38 +16,38 @@
     "update-dependencies": "npx npm-check-updates --upgrade && npm i"
   },
   "devDependencies": {
-    "@astrojs/react": "^1.2.2",
-    "@astrojs/tailwind": "^2.1.2",
-    "@astrojs/vercel": "^2.3.4",
-    "@tailwindcss/typography": "^0.5.8",
+    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/vercel": "^2.4.0",
+    "@solidjs/testing-library": "^0.5.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "@vitejs/plugin-react": "^2.2.0",
-    "astro": "^1.6.10",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "@vitejs/plugin-react": "^3.0.1",
+    "astro": "^1.9.2",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "happy-dom": "^7.7.0",
-    "husky": "^8.0.2",
+    "happy-dom": "^8.1.4",
+    "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
-    "prettier-plugin-astro": "^0.7.0",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "prettier-plugin-astro": "^0.7.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite-tsconfig-paths": "^3.6.0",
-    "vitest": "^0.25.3"
+    "typescript": "^4.9.4",
+    "vite-plugin-solid": "^2.5.0",
+    "vite-tsconfig-paths": "^4.0.3",
+    "vitest": "^0.27.1"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^1.2.3",
+    "solid-js": "^1.6.8",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
