--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "lint": "eslint src/**/*.ts src/**/*.tsx *.ts *.mjs *.cjs",
-    "lint:fix": "eslint src/**/*.ts src/**/*.tsx *.ts *.mjs *.cjs --fix",
+    "lint": "eslint src/**/*.ts *.mjs *.cjs",
+    "lint:fix": "eslint src/**/*.ts *.mjs *.cjs --fix",
     "format:write": "prettier --write .",
     "format:check": "prettier --check  .",
     "prepare": "is-ci || husky install",
