--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,32 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install pnpm 8
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-      - run: pnpm install
-      - run: ENABLE_VC_BUILD=1 pnpm run build
+      - uses: oven-sh/setup-bun@v1
+      - run: bun install
+      - run: ENABLE_VC_BUILD=1 bun run build
         env:
           CI: true
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install pnpm 8
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-      - run: pnpm install
-      - run: pnpm run lint
-      - run: pnpm run format:check
+      - uses: oven-sh/setup-bun@v1
+      - run: bun install
+      - run: bun run lint
+      - run: bun run format:check
         env:
           CI: true
