--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "update-dependencies": "bunx @astrojs/upgrade;bunx npm-check-updates --upgrade && bun install"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/tailwind": "^5.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.10.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "astro": "4.15.4",
+    "astro": "^4.15.12",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,8 +40,8 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@astrojs/node": "^8.3.4",
     "solid-js": "^1.8.22",
-    "@astrojs/node": "^8.3.3",
     "ts-md5": "^1.3.1"
   },
   "lint-staged": {
