--- a/deno.json
+++ b/deno.json
@@ -32,6 +32,6 @@
     "indentWidth": 2,
     "semiColons": false,
     "singleQuote": true,
-    "exclude": ["dist", "vercel", ".astro", "public", "node_modules"]
+    "exclude": ["dist", "vercel", "public", "node_modules"]
   }
 }
